src/test/deca/context/valid/class_decl/method_public.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class Test {
	int a;

	void testMethod(int b, int c) {
		int d;
	}
}

{

}

