src/test/deca/context/invalid/class/class_decl/float.deca
// Description:
//    Déclaration d'une classe float
//
// Resultats:
//    Double définition of float
// 
// Historique:
//    cree le 01/01/2016

class float {

}

{

}
